packages/parser-4d/grammar.js
    source_file: ($) => repeat($._top_level_item),

    _top_level_item: ($) =>
      choice(
        $._declaration,
        $.directive_statement,
        $._statement,
        $._newline,
      ),

    // Directives stand on their own at top level: `#PROJECT METHOD`,
    // `#PROPERTIES`. Separate from `_statement` because tree-sitter's LR
    // analysis can't reach `directive` through `_primary_expression` at
    // start-of-line — the `#` token gets snapped up by `binary_expression`
    // before the parser can backtrack into the directive's longer match.
    directive_statement: ($) => seq($.directive, $._newline),

    _newline: ($) => /\n/,

    _block_item: ($) => choice($._statement, $._newline),

    // ---- Control flow ----

    if_statement: ($) =>
      seq(
        $.keyword_if,
        "(",
        field("condition", $._expression),
        ")",
        $._newline,
        field("then", repeat($._block_item)),
        repeat(field("else_if", $.else_if_clause)),
        optional(field("else", $.else_clause)),
        $.keyword_end_if,
        $._newline,
      ),

    return_statement: ($) =>
      seq(
        $.keyword_return,
        optional(field("value", $._expression)),
        $._newline,
      ),

    // `target := value`, `target += value`, etc. Compound forms are emitted
    // as a distinct `compound_assign_op` so the visitor can synthesize the
    // implicit read.
    expression_statement: ($) =>
      seq(field("expression", $._expression), $._newline),


    // ---- Expressions ----

    _expression: ($) =>
      choice(
        $._primary_expression,
        $.member_expression,
        $.call_expression,
        $.subscript_expression,
        $.binary_expression,
        $.unary_expression,
        $.parenthesized_expression,
        $.object_literal,
        $.collection_literal,
      ),

    wildcard: ($) => "*",

    // `expr.name` — member access. `name` can be a regular identifier or a
    // contextual keyword (since 4D allows e.g. `cs.Foo.get(...)` and chains
    // off `This.set`).
    member_expression: ($) =>
      prec.left(
        PREC.MEMBER,
        seq(
          field("object", $._expression),
          ".",
          field("property", $._member_name),
        ),
      ),

    _member_name: ($) =>
      choice(
        $.identifier,
        alias($.keyword_get, $.identifier),
        alias($.keyword_set, $.identifier),
        alias($.keyword_new, $.identifier),
      ),

    // `expr[index]` — bracket subscript. Distinct from `[Table]` and
    // `[Table]Field` tokens because those are lexed atomically.
    call_expression: ($) =>
      prec.left(
        PREC.CALL,
        seq(
          field("function", $._expression),
          field("arguments", $.argument_list),
        ),
      ),

    // Multi-word command callee. Allows certain contextual keywords (`New`,
    // `Get`, `Set`) as either the head or trailing words — necessary for
    // `New object(...)`, `New collection(...)`, `OB Get(...)`, `OB Set(...)`,
    // etc. Pure identifiers still cover the bulk: `CALL WORKER`,
    // `EXECUTE METHOD`, `Open form window`.
    multi_word_identifier: ($) =>
      seq($._word_or_keyword, repeat1($._word_or_keyword)),

    _word_or_keyword: ($) =>
      choice(
        $.identifier,
        alias($.keyword_new, $.identifier),
        alias($.keyword_get, $.identifier),
        alias($.keyword_set, $.identifier),
      ),

    argument_list: ($) =>
      seq(
        "(",
        optional(seq($._expression, repeat(seq(";", $._expression)))),
        ")",
      ),

    parenthesized_expression: ($) => seq("(", $._expression, ")"),

    // `{key: value; key: value; ...}` — 4D object literal. Keys are bare
    // identifiers, separator is `;`.
    identifier: ($) => /[A-Za-z0-9_]*[A-Za-z_][A-Za-z0-9_]*/,
    local_var: ($) =>
      /\$[A-Za-z_][A-Za-z0-9_]*|\$\d+[A-Za-z_][A-Za-z0-9_]*/,
    parameter: ($) => /\$\d+/,
    interprocess_var: ($) => /<>[A-Za-z_][A-Za-z0-9_]*/,
    field_ref: ($) => /\[[A-Za-z_][A-Za-z0-9_]*\][A-Za-z_][A-Za-z0-9_]*/,
    table_ref: ($) => /\[[A-Za-z_][A-Za-z0-9_]*\]/,

    // Number literals.
    //
    // Hex (`0xCAFE`) and scientific (`5e2`) forms need `prec(2)` to beat an
    // identifier match of the same length (since `identifier` now allows
    // digit-first and letter-middle: `5e2` matches identifier regex too).
    // Plain integers (`42`) don't overlap with identifier (it requires at
    // least one letter or underscore). Decimal (`3.14`), date, and time
    // forms have characters that identifier can't accept.
    number: ($) =>
      choice(
        token(prec(2, /0[xX][0-9a-fA-F]+/)),
        token(/\d+\.\d+([eE][+-]?\d+)?/),
        token(prec(2, /\d+[eE][+-]?\d+/)),
        token(/\d+/),
        token(/![\d\-]{1,12}!/),
        token(/\?[\d:]{1,10}\?/),
      ),

    string: ($) =>
      token(
        seq(
          '"',
          repeat(choice(/[^"\\\n]/, /""/, /\\./)),
          '"',
        ),
      ),

    line_comment: ($) => token(seq("//", /[^\n]*/)),

    block_comment: ($) =>
      token(seq("/*", /([^*]|\*+[^*/])*/, /\*+\//)),

    // General-purpose directive (anything matching `#KEYWORD ...` at line
    // start that isn't the structured `#DECLARE`). Case-insensitive regex
    // for each keyword. `prec(3)` ensures these win at character zero over
    // the bare `#` token used elsewhere (`binary_expression` choice).
    directive: ($) =>
      token(
        prec(
          3,
          choice(
            /#[pP][rR][oO][jJ][eE][cC][tT][ \t]+[mM][eE][tT][hH][oO][dD]/,
            /#[pP][rR][oO][pP][eE][rR][tT][iI][eE][sS]/,
          ),
        ),
      ),

    // ---- Keywords ----

    keyword_if: ($) => token(prec(1, kw("if"))),
    keyword_end_if: ($) => token(prec(1, kw("end if"))),
    keyword_return: ($) => token(prec(1, kw("return"))),
    keyword_this: ($) => token(prec(1, kw("this"))),
    keyword_super: ($) => token(prec(1, kw("super"))),
