packages/parser-4d/test/corpus/lexical_directives.txt
==================
directive — #PROJECT METHOD
==================

#PROJECT METHOD

---

(source_file
  (directive_statement
    (directive)))

==================
directive — #PROPERTIES
==================

#PROPERTIES

---

(source_file
  (directive_statement
    (directive)))
