packages/parser-4d/test/corpus/lexical_identifiers.txt
==================
identifiers — basic
==================

MyMethod
_private
camelCase
Snake_Case_123

---

(source_file
  (expression_statement expression: (identifier))
  (expression_statement expression: (identifier))
  (expression_statement expression: (identifier))
  (expression_statement expression: (identifier)))

==================
identifiers — must not start with digit
==================

abc123

---

(source_file
  (expression_statement expression: (identifier)))

==================
identifiers — may start with digit (4D constants)
==================

4Q_TYPE_AuditCreditCards

---

(source_file
  (expression_statement expression: (identifier)))

==================
local variable — letters only
==================

$foo

---

(source_file
  (expression_statement expression: (local_var)))

==================
local variable — with digits
==================

$foo123

---

(source_file
  (expression_statement expression: (local_var)))

==================
local variable — digits then letters (mixed)
==================

$12abc

---

(source_file
  (expression_statement expression: (local_var)))

==================
positional parameter — single digit
==================

$0

---

(source_file
  (expression_statement expression: (parameter)))

==================
positional parameter — multiple digits
==================

$42

---

(source_file
  (expression_statement expression: (parameter)))

==================
interprocess variable
==================

<>aGlobal

---

(source_file
  (expression_statement expression: (interprocess_var)))

==================
interprocess variable — underscore start
==================

<>_legacy

---

(source_file
  (expression_statement expression: (interprocess_var)))

==================
table reference
==================

[Order]

---

(source_file
  (expression_statement expression: (table_ref)))

==================
field reference
==================

[Order]Number

---

(source_file
  (expression_statement expression: (field_ref)))

==================
mixed identifiers and variables
==================

MyMethod
$local
$1
<>shared
[Order]
[Order]Number

---

(source_file
  (expression_statement expression: (identifier))
  (expression_statement expression: (local_var))
  (expression_statement expression: (parameter))
  (expression_statement expression: (interprocess_var))
  (expression_statement expression: (table_ref))
  (expression_statement expression: (field_ref)))
