packages/parser-4d/test/corpus/lexical_keywords.txt
==================
keyword — return statement
==================

return

---

(source_file
  (return_statement
    (keyword_return)))

==================
keyword — This expression
==================

This

---

(source_file
  (expression_statement expression: (keyword_this)))

==================
keyword — Super expression
==================

Super

---

(source_file
  (expression_statement expression: (keyword_super)))

==================
keyword — control flow: If block (empty body)
==================

If ($x)
End if

---

(source_file
  (if_statement
    (keyword_if)
    condition: (parenthesized_expression (local_var))
    (keyword_end_if)))

==================
keyword — control flow: if block (lowercase keywords)
==================

if ($x)
end if

---

(source_file
  (if_statement
    (keyword_if)
    condition: (parenthesized_expression (local_var))
    (keyword_end_if)))

==================
keyword — END IF case-insensitive uppercase
==================

If ($x)
END IF

---

(source_file
  (if_statement
    (keyword_if)
    condition: (parenthesized_expression (local_var))
    (keyword_end_if)))

==================
keyword — End if with extra whitespace
==================

If ($x)
End    if

---

(source_file
  (if_statement
    (keyword_if)
    condition: (parenthesized_expression (local_var))
    (keyword_end_if)))

==================
keyword vs identifier — longer identifier wins
==================

IfFoo

---

(source_file
  (expression_statement expression: (identifier)))

==================
New as part of multi-word command
==================

New process

---

(source_file
  (expression_statement
    expression: (multi_word_identifier
      (identifier)
      (identifier))))
