packages/parser-4d/test/corpus/lexical_strings.txt
==================
string — simple
==================

"hello"

---

(source_file
  (expression_statement expression: (string)))

==================
string — empty
==================

""

---

(source_file
  (expression_statement expression: (string)))

==================
string — doubled-quote escape (4D classic)
==================

"She said ""hi"""

---

(source_file
  (expression_statement expression: (string)))

==================
string — backslash-quote escape (4D v18+)
==================

"path is C:\"foo\""

---

(source_file
  (expression_statement expression: (string)))

==================
string — backslash other escapes
==================

"line1\nline2\tend"

---

(source_file
  (expression_statement expression: (string)))

==================
string — embedded brackets and dollar signs
==================

"[$param]"

---

(source_file
  (expression_statement expression: (string)))

==================
multiple strings on separate lines
==================

"first"
"second"
"third"

---

(source_file
  (expression_statement expression: (string))
  (expression_statement expression: (string))
  (expression_statement expression: (string)))
